# Learn-LLVM-12

./: README.md
Chapter010/jit/: JIT.h
Chapter010/lljit/: JIT.cpp
Chapter011/clang-plugin/: CMakeLists.txt
Chapter011/clang-plugin2/: NamingPlugin.cpp
Chapter02/tinylang/lib/: CMakeLists.txt
Chapter02/tinylang/lib/Basic/: CMakeLists.txt
Chapter02/tinylang/tools/driver/: Driver.cpp
Chapter03/calc/src/: Calc.cpp  CodeGen.cpp  Lexer.cpp  Parser.h
Chapter04/bisonflex/: tinylang.yy
Chapter04/tinylang/: .clang-format
Chapter04/tinylang/cmake/modules/: AddTinylang.cmake
Chapter04/tinylang/lib/Basic/: Version.cpp
Chapter04/tinylang/lib/Sema/: CMakeLists.txt
Chapter05/tinylang/: .gitignore
Chapter05/tinylang/lib/CodeGen/: CGModule.cpp  CGProcedure.cpp  CMakeLists.txt  CodeGenerator.cpp
Chapter05/tinylang/lib/Sema/: Scope.cpp  Sema.cpp
Chapter05/tinylang/tools/driver/: Driver.cpp
Chapter06/tinylang/examples/: Point.mod
Chapter06/tinylang/lib/CodeGen/: CGModule.cpp  CGProcedure.cpp  CodeGenerator.cpp
Chapter06/tinylang/lib/Sema/: Sema.cpp
Chapter06/tinylang/tools/driver/: CMakeLists.txt  Driver.cpp
Chapter07/calc/: rtcalc.cpp
Chapter07/calc/src/: AST.h  CodeGen.cpp  Lexer.h  Sema.h
Chapter07/tinylang/examples/: Gcd.mod
Chapter07/tinylang/lib/: CMakeLists.txt
Chapter07/tinylang/lib/CodeGen/: CGModule.cpp  CGProcedure.cpp
Chapter07/tinylang/lib/Lexer/: CMakeLists.txt
Chapter08/: demo.ll
Chapter08/countir/: CMakeLists.txt
Chapter08/countir-legacy/include/: CountIR.h
Chapter08/countir-legacy/lib/: CMakeLists.txt  CountIR.cpp
Chapter08/countir/include/: CountIR.h
Chapter08/countir/lib/: CountIR.cpp
Chapter08/tinylang/examples/: Const.mod
Chapter08/tinylang/lib/Basic/: CMakeLists.txt
Chapter08/tinylang/lib/CodeGen/: CGModule.cpp  CGProcedure.cpp
Chapter08/tinylang/lib/Lexer/: Lexer.cpp
Chapter08/tinylang/lib/Parser/: Parser.cpp
Chapter08/tinylang/tools/driver/: Driver.cpp
Chapter08/tinylang2/: .clang-format
Chapter08/tinylang2/lib/Parser/: CMakeLists.txt
Chapter08/tinylang2/tools/driver/: CMakeLists.txt  Driver.cpp
Chapter09/isel/: sum.ll
Chapter10/jit/: .clang-format  CMakeLists.txt  JIT.cpp  main-aarch64.ll  main.ll
Chapter10/lljit/: .clang-format  CMakeLists.txt  main.ll
Chapter11/clang-plugin/: NamingPlugin.cpp
Chapter11/libfuzzer/: fuzzer.c
Chapter11/sanitizers/: thread.c
Chapter11/staticanalyzer/scan-build/: report-c9ff72.html
Chapter11/xray/: xray.evt
Chapter12/: m88k.diff
chapter10/clang-plugin/: CMakeLists.txt
chapter10/clang-plugin2/: NamingPlugin.cpp
chapter10/jit/: .clang-format  CMakeLists.txt  JIT.h
chapter10/lljit/: .clang-format  CMakeLists.txt  main.ll
chapter10/sanitizers/: memory.c  outofbounds.c  useafterfree.c
chapter10/staticanalyzer/scan-build/: index.html
chapter10/xray/: xraydemo.c
chapter11/: m88k.diff
chapter11/clang-plugin/: NamingPlugin.cpp
chapter11/staticanalyzer/: div.c
chapter12/: m88k.diff
chapter2/tinylang/: CMakeLists.txt
chapter2/tinylang/tools/: CMakeLists.txt
chapter2/tinylang/tools/driver/: CMakeLists.txt
chapter3/calc/: CMakeLists.txt  rtcalc.c
chapter3/calc/src/: CMakeLists.txt  CodeGen.cpp  CodeGen.h  Lexer.h  Parser.cpp  Sema.cpp  calc.def  calc.g  calc_orig.g
chapter4/bisonflex/: tinylang.l
chapter4/tinylang/: Gcd.mod
chapter4/tinylang/lib/: CMakeLists.txt
chapter4/tinylang/lib/Basic/: Diagnostic.cpp  TokenKinds.cpp
chapter4/tinylang/lib/Lexer/: Lexer.cpp
chapter4/tinylang/lib/Parser/: Parser.cpp
chapter4/tinylang/lib/Sema/: Sema.cpp
chapter4/tinylang/tools/driver/: CMakeLists.txt  Driver.cpp
chapter5/tinylang/examples/: Gcd.mod
chapter5/tinylang/lib/CodeGen/: CGModule.cpp  CGProcedure.cpp
chapter5/tinylang/lib/Parser/: Parser.cpp
chapter5/tinylang/tools/driver/: Driver.cpp
chapter7/calc/: CMakeLists.txt
chapter7/calc/src/: CMakeLists.txt  Calc.cpp  CodeGen.h  Lexer.cpp  Lexer.h  Parser.cpp
chapter7/countir-intree/: countir.diff
chapter7/countir-legacy/: CMakeLists.txt
chapter7/countir-legacy/lib/: CountIR.cpp
chapter7/tinylang/: CMakeLists.txt
chapter7/tinylang/cmake/modules/: AddTinylang.cmake
chapter7/tinylang/examples/: Const.mod  Gcd.mod
chapter7/tinylang/include/tinylang/AST/: AST.h
chapter7/tinylang/include/tinylang/CodeGen/: CGDebugInfo.h  CGTBAA.h  CodeGenerator.h
chapter7/tinylang/lib/CodeGen/: CGModule.cpp  CGProcedure.cpp  CGTBAA.cpp  CMakeLists.txt
chapter7/tinylang/lib/Lexer/: Lexer.cpp
chapter7/tinylang/lib/Parser/: CMakeLists.txt  Parser.cpp
chapter7/tinylang/tools/: CMakeLists.txt
chapter7/tinylang/tools/driver/: Driver.cpp
chapter7/tinylang2/lib/Basic/: CMakeLists.txt
chapter7/tinylang2/lib/Lexer/: CMakeLists.txt
chapter7/tinylang2/lib/Sema/: CMakeLists.txt
chapter7/tinylang2/tools/driver/: CMakeLists.txt  Driver.cpp
chapter8/countir-legacy/: .clang-format
chapter8/countir-legacy/include/: CountIR.h
chapter8/countir/include/: CountIR.h
chapter8/countir/lib/: CMakeLists.txt  CountIR.cpp
chapter8/sqsum-instruction/: sqsum.diff
chapter8/tinylang/: .clang-format  .gitignore  CMakeLists.txt
chapter8/tinylang/tools/driver/: Driver.cpp
chapter8/tinylang2/lib/: CMakeLists.txt
chapter8/tinylang2/lib/Basic/: Diagnostic.cpp  Version.cpp  (+1 more)
chapter9/isql/: sum.ll
chapter9/jit/: .clang-tidy  CMakeLists.txt  JIT.cpp  main.ll
chapter9/lljit/: CMakeLists.txt  JIT.cpp
chatper6/calc/: CMakeLists.txt  rtcalc.cpp
chatper6/calc/src/: AST.h  CodeGen.cpp  Parser.h  Sema.h
(+62 files in other folders)
